kubernetes/base/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minipay-db
  namespace: minipay
  labels:
    app: minipay-db
spec:
  serviceName: minipay-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: minipay-db
  template:
    metadata:
      labels:
        app: minipay-db
    spec:
      securityContext:
        fsGroup: 70
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: pg
              containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "minipay", "-d", "minipay"]
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "minipay", "-d", "minipay"]
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
