kubernetes/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minipay-web
  namespace: minipay
  labels:
    app: minipay-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minipay-web
  template:
    metadata:
      labels:
        app: minipay-web
    spec:
      containers:
        - name: web
          image: minipay-web:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: minipay-web
  namespace: minipay
spec:
  type: ClusterIP
  selector:
    app: minipay-web
  ports:
    - name: http
      port: 80
      targetPort: http
